# QATTH

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  streamlit_app.py
.github/workflows/: backend-ci.yml
backend/app/: __init__.py  main.py
backend/app/api/: admin.py  auth.py  cv.py  discovery.py  files.py  health.py  interviews.py  jobs.py  matches.py  ops.py  profile.py  recommendations.py  router.py  tasks.py
backend/app/core/: celery_app.py  config.py  correlation.py  (+10 more)
docs/: api_contract.md  production_readiness.md
docs/adr/: 0001-use-postgresql.md  0002-use-openai-api.md  0003-use-provider-neutral-billing-ledger.md  0006-use-paddle-as-first-payment-adapter.md
docs/api/: openapi.yaml
docs/architecture/: components.md  data-flow.md  overview.md
docs/billing/: pricing-and-credits.md
docs/database/: schema.md
docs/deployment/: production.md
docs/operations/: backend-release-evidence-2026-07-15.md  load-testing.md
docs/requirements/: functional-requirements.md  non-functional-requirements.md  traceability.md
migrations/: README  README.md  env.py
migrations/versions/: 20260707_0001_initial_schema.py  20260707_0002_background_tasks.py  20260707_0003_file_assets.py  20260707_0004_ai_model_runs.py  20260707_0005_security_privacy.py  20260707_0006_candidate_discovery.py  20260714_0007_identity_profile_consent.py  20260714_0008_product_files_cv.py  20260714_0009_product_interviews.py  20260714_0010_product_job_search.py  20260714_0011_product_recommendations.py  20260714_0012_product_billing.py  20260714_0013_product_privacy.py  20260714_0014_product_admin_ops.py  20260714_0015_identity_file_cv_hardening.py  20260714_0016_interview_hardening.py  20260714_0017_job_search_hardening.py  20260714_0018_billing_dual_control.py  20260714_0019_provider_usage_observability.py  20260715_0020_payment_reconciliation.py  20260715_0021_interview_billing_boundary.py  20260715_0022_recommendation_feedback.py  20260715_0023_job_ranking_breakdown.py  20260715_0024_oidc_session_identity.py  20260715_0025_billing_catalog_schedule.py  20260715_0026_payment_reversal_accounting.py  20260715_0027_durable_task_dispatch.py  20260715_0028_ai_task_processing_leases.py  20260715_0029_async_run_correlation.py  20260715_0030_operational_job_retry_outbox.py  20260715_0031_immutable_privacy_events.py  20260715_0032_immutable_domain_histories.py  20260715_0033_append_only_product_events.py  20260715_0034_model_quality_governance.py  82fe1d807848_product_foundation_primitives.py
scripts/: sync_openapi.py
tests/: test_admin_job_retry_outbox.py  test_ai_task_leases.py  test_append_only_product_events.py  test_async_run_correlation.py  test_billing_catalog_schedule.py  test_candidate_profile_invalidation.py  test_container_contract.py  test_contract.py  test_credit_reservation_reconciliation.py  test_database_revision_contract.py  test_distributed_rate_limit.py  test_domain_history_invariants.py  test_durable_task_dispatch.py  test_error_safety.py  test_gemini_interview_gateway.py  test_identity_contract.py  test_identity_security.py  test_job_ingest_policy.py  test_job_search.py  test_live_job_discovery.py  test_model_quality_governance.py  test_openapi_contract_sync.py  test_payment_adapter.py  test_payment_reconciliation_contract.py  test_payment_reversal_accounting.py  test_privacy_artifact_retention.py  test_product_admin_ops_contract.py  test_product_billing_contract.py  test_product_cv_contract.py  test_product_file_security.py  test_product_health_readiness.py  test_product_interview_contract.py  test_product_job_ranking.py  test_product_job_search_contract.py  test_product_privacy_contract.py  test_product_recommendations_contract.py  test_product_runtime_metrics.py  test_production_config.py  test_provider_resilience.py  test_recommendation_feedback_contract.py  (+2 more)
tests/load/: product_api.js
(+88 files in other folders)
