[project]
name = "qatth-career-platform"
version = "0.1.0"
description = "Backend-first MVP for IT student CV scanning, virtual interviews, and job matching."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.0",
    "beautifulsoup4>=4.12.3",
    "celery>=5.4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "minio>=7.2.0",
    "numpy>=1.26.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "pgvector>=0.3.6",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "playwright>=1.45.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0.2",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "scrapy>=2.11.0",
    "sqlalchemy>=2.0.32",
    "structlog>=24.4.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "ruff>=0.5.0",
]
ml = [
    "sentence-transformers>=3.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]
